# ocr-benchmarking

./: .gitignore  CLAUDE.md  README.md  lit.md  pyproject.toml  requirements.txt
data/: prob2.md
etl/: export_properties.py  requirements.txt  run_etl.py  todo.md
etl/.ref/: config.yaml  page_index.py  utils.py
etl/config/: chem_entities.yaml  chem_smiles.yaml  pipeline_config.yaml
etl/pipeline/: asset_extractor.py  chandra_parser.py  chem_extractor.py  enricher.py  layout_detector.py  node_schema.py  prompts.py  property_extractor.py  property_schema.py  resummarizer.py  smiles_resolver.py  tree_builder.py
etl/tests/: test_property_extraction.py
frontend/: README.md  package.json  server.js
frontend/public/: app.js  index.html  style.css
preprocessing/: extract.py  layout.py
shared/prompts/chandra/: __init__.py  v1.py
vllm/: README.md  batch.py  client.py  compare.py  requirements.txt  serve_deepseek_ocr.sh  serve_dots_mocr.sh  serve_olmocr.sh
vllm/aws/: config.sh  launch.sh  setup_remote.sh  status.sh  terminate.sh
